# frobby

./: CMakeLists.txt  Makefile  changelog.txt
.github/workflows/: build.yml
doc/: doxygen.conf  manual.tex
src/: frobby.cpp
test/messages/: help-noparam.err
